[package]
name = "crypti"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Decoding, encoding, conversion tool"
homepage = "https://github.com/brainwo/crypti"
repository = "https://github.com/brainwo/crypti"
readme = "README.md"
authors = ["Brian Wo <45139213+brainwo@users.noreply.github.com>"]

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }

[profile.release]
lto = true
