[package]
name = "crypti"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Decoding, encoding, conversion tool"
homepage = "https://github.com/brainwo/crypti"
repository = "https://github.com/brainwo/crypti"
readme = "README.md"
authors = ["Brian Wo <45139213+brainwo@users.noreply.github.com>"]

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
itertools = "0.10.4"

[profile.release]
lto = true
